--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Index</h1>
         <h2>Introduction to World Geography</h2>
         <ul>
-            <a href="">
+            <a href="introduction_to_world_Geography/1.1basic_concepts_of_Geography.html">
                 <li>1.1. Basic Concepts of Geography</li>
             </a>
         </ul>
